Cryptomatte layers saved incorrectly with EXR DWA compression #96933

Closed
opened 2022-03-31 23:46:27 +02:00 by Daniel Salazar · 17 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-30 23:25, hash: 8466fd4bd1

Description of error
Cryptomatte layers on a multilayer EXR (DWA) file will be saved as lossy which makes them unusable. Lossy compression in DWA is only meant for RGB layers.

Lossless cryptomatte (ZIP)
image.png
Lossy Cryptomatte (DWAB)
image.png

Apparently DWA handles these type of exceptions based on hardcoded layer names .

There's also the possibility of setting custom rules in the file. More info can be read in the commented section at EXR's ImfDwaCompressor.cpp file.

The rules for deciding which strategy to use are setup in initializeDefaultChannelRules().
When writing a file, the relevant rules needed to decode are written into the start of the data block, making a self-contained file.
If initializeDefaultChannelRules() doesn't quite suite your naming conventions, you can adjust the rules without breaking decoder compatability.

Cryptomatte example file in DWAB
Cryptomatte Example.zip

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-30 23:25, hash: `8466fd4bd1` **Description of error** Cryptomatte layers on a multilayer EXR (DWA) file will be saved as lossy which makes them unusable. Lossy compression in DWA is only meant for RGB layers. Lossless cryptomatte (ZIP) ![image.png](https://archive.blender.org/developer/F12960547/image.png) Lossy Cryptomatte (DWAB) ![image.png](https://archive.blender.org/developer/F12960549/image.png) Apparently DWA handles these type of exceptions based on [hardcoded layer names ](https://github.com/Psyop/Cryptomatte/issues/35#issuecomment-331042950). There's also the possibility of setting custom rules in the file. More info can be read in the commented section at EXR's [ImfDwaCompressor.cpp ](https://github.com/AcademySoftwareFoundation/openexr/blob/2205245599709d88013b7da03b176c1c73c8aedb/src/lib/OpenEXR/ImfDwaCompressor.cpp) file. > The rules for deciding which strategy to use are setup in initializeDefaultChannelRules(). > When writing a file, the relevant rules needed to decode are written into the start of the data block, making a self-contained file. > If initializeDefaultChannelRules() doesn't quite suite your naming conventions, you can adjust the rules without breaking decoder compatability. Cryptomatte example file in DWAB [Cryptomatte Example.zip](https://archive.blender.org/developer/F12961208/Cryptomatte_Example.zip)
Poster
Collaborator

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscriber: @emilstefx

Added subscriber: @emilstefx

Added subscriber: @TomsSeglins

Added subscriber: @TomsSeglins

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can you add simple .blend file?

Can you add simple .blend file?
Poster
Collaborator

In #96933#1333369, @iss wrote:
Can you add simple .blend file?

A simple blend file of what?

> In #96933#1333369, @iss wrote: > Can you add simple .blend file? A simple blend file of what?

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Thanks for file. I wasn't sure how to check, since output did look correct.

Thanks for file. I wasn't sure how to check, since output did look correct.

Added subscriber: @Raimund58

Added subscriber: @Raimund58

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Sergey Sharybin self-assigned this 2022-08-31 16:03:11 +02:00

This issue was referenced by cb9b6cefb3

This issue was referenced by cb9b6cefb3c01d3f759a16252aca59fa4607dd24

This issue was referenced by df751516e1

This issue was referenced by df751516e1f64bbc78b02582c631c3cdd0bc032d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by 40194f7219

This issue was referenced by 40194f72191fc629b96ce619540b3f0f5da0ccfc

This issue was referenced by 06005b0870

This issue was referenced by 06005b0870be9a0a3b73b4c388c26988f1f991d2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96933
There is no content yet.